examples/test/testpolicy11820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11820
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key31: value32
      key2: value26
      key39: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value33
          key2: value7
      podSelector:
        matchLabels:
          key48: value14
